--- a/project/.travis.yml
+++ b/project/.travis.yml
@@ -5,10 +5,14 @@ node_js:
 services:
   - docker
 script:
-  - docker tag udagram-api-feed otejada/udagram-api-user:v1
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker tag udagram-api-user otejada/udagram-api-user:v1
+  - docker build -t udagram-api-feed ./udagram-api-feed
   - docker tag udagram-api-feed otejada/udagram-api-feed:v1
-  - docker tag udagram-api-feed otejada/reverseproxy:v1
-  - docker tag udagram-api-feed otejada/udagram-frontend:v1
+  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker tag reverseproxy otejada/reverseproxy:v1
+  - docker build -t udagram-api-frontend ./udagram-api-frontend
+  - docker tag udagram-api-frontend otejada/udagram-frontend:v1
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
